--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="filterContainer">
-        <div>
+        <div class="filterDiv">
             <h1 class="filter">Filter</h1>
 
         </div>
